--- a/app/views/OrgaController/getOne.html
+++ b/app/views/OrgaController/getOne.html
@@ -7,7 +7,7 @@
 {% block body %}
 {{ parent() }}
 <div class="ui attached inverted segment"><a href="{{ path('orga.index') }}" data-target="body"  class="ui basic inverted button">
-    <i class="factory icon"></i>{{byId.name}}
+    <i class="warehouse icon"></i>{{byId.name}}
 </a></div>
 <div class="ui attached segment">
 
@@ -15,13 +15,20 @@
         <div class="column">
             <h2>Utilisateurs</h2>
             {% for user in byId.users %}
-            <li>{{user}}<label class="ui label"><i class="ui users icon"></i> </label></li>
+
+            <li>{{user}}
+                {% if user.groupes|length >0 %}
+                <label class="ui tiny black circular label"><i class="ui users icon"></i> {{user.groupes|length}}</label></li>
+                {% endif %}
             {% endfor %}
         </div>
         <div class="column">
             <h2>Groupes</h2>
             {% for groupe in byId.groupes %}
-            <li>{{groupe}}</li>
+            <li>{{groupe}}
+                {% if groupe.users|length >0 %}
+                <label class="ui tiny black circular label"><i class="ui user icon"></i>{{groupe.users|length}}</label></li>
+            {% endif %}
             {% endfor %}
         </div>
     </div>
