--- a/app/views/OrgaController/index.html
+++ b/app/views/OrgaController/index.html
@@ -3,6 +3,8 @@
 <a href="{{ path('orga.index') }}" data-target="body"  class="ui basic inverted button">
     <i class="factory icon"></i>Organisations
 </a><a href="{{ path('orgas.addOrga') }}"><i class="ui add icon"></i>Ajouter une organisation</a>
+<a href="{{ path('groupes.addGroupe') }}"><i class="ui add icon"></i>Ajouter un groupe</a>
+
 {% endblock %}
 {% block body %}
 {{ parent() }}
@@ -13,7 +15,7 @@
         <a href="{{path('orgas.update',[orga.id])}}">
             <i class="ui edit icon"></i>
         </a>
-        <a href="{{path('orgas.delete',[orga.id])}}">
+        <a href="{{path('orga.deleteOrga',[orga.id])}}">
             <i class="ui red delete icon"></i>
         </a>
     </li>
