--- a/app/views/OrgaController/addOrga.html
+++ b/app/views/OrgaController/addOrga.html
@@ -1,9 +1,9 @@
 
 <div class="ui segment olive top">
 <form class="ui form" action="{{path('orga.add')}}" method="post">
-    <button class="ui basic olive button" type="button"><i class="add icon"></i>Ajouter une organisation...</button>
+    <a class="ui basic olive button" href="{{ path('orga.index') }}"><i class="add icon"></i>Ajouter une organisation...</a>
     <div class="ui icon message">
-        <i class="calendar plus icon"></i>
+        <i class="table plus icon"></i>
         <div class="content">
             <div class="header">
                 Ajout
