--- a/app/views/OrgaController/index.html
+++ b/app/views/OrgaController/index.html
@@ -2,8 +2,8 @@
 {% block header %}
 <a href="{{ path('orga.index') }}" data-target="body"  class="ui basic inverted button">
     <i class="factory icon"></i>Organisations
-</a><a href="{{ path('orgas.addOrga') }}"><i class="ui add icon"></i>Ajouter une organisation</a>
-<a href="{{ path('groupes.addGroupe') }}"><i class="ui add icon"></i>Ajouter un groupe</a>
+</a><a href="{{ path('orgas.addOrga') }}" class="ui basic inverted tiny button"><i class="ui add icon"></i>Ajouter une organisation</a>
+<a href="{{ path('groupes.addGroupe') }}" class="ui basic inverted tiny button"><i class="ui add icon"></i>Ajouter un groupe</a>
 
 {% endblock %}
 {% block body %}
